--- a/app/views/resources/_topics.html.erb
+++ b/app/views/resources/_topics.html.erb
@@ -4,6 +4,7 @@
     <div class="topics">
       <div class="row">
 	<span class="topics-heading">TOPICS</span>
+	<% index = 0 %>
 	<% resource.topics.group_by(&:category).each do |cat, topics| %>
 	    <div class="topic">
 	      <%= link_to cat.name, "/items?category="+cat.slug %>
@@ -11,9 +12,10 @@
 	    <% topics.each do |topic| %>
 		<div class="sub-topic" id="sub-topic-<%= index %>"><%= link_to topic.name, "/items?topic="+topic.slug %>
 		</div>
-	    <% end %>
-	  <% end %>
+		<% index = index + 1 %>
 
+	  <% end %>
+	<% end %>
       </div>
     </div>
   </div>
