--- a/app/views/resources/_topics.html.erb
+++ b/app/views/resources/_topics.html.erb
@@ -6,6 +6,7 @@
 	<span class="topics-heading">TOPICS</span>
 	<% index = 0 %>
 	<% resource.topics.group_by(&:category).each do |cat, topics| %>
+	  <% if cat %>
 	    <div class="topic">
 	      <%= link_to cat.name, "/items?category="+cat.slug %>
 	    </div>
@@ -13,7 +14,7 @@
 		<div class="sub-topic" id="sub-topic-<%= index %>"><%= link_to topic.name, "/items?topic="+topic.slug %>
 		</div>
 		<% index = index + 1 %>
-
+	    <% end %>
 	  <% end %>
 	<% end %>
       </div>
