--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -22,7 +22,7 @@
 				<% end %>
 
 				<% [:location, :organizers].each do |facet| %>
-				    <% if result.respond_to?(facet) && !(result.highlight_result.try(:[], facet).blank?) %>
+				    <% if result.respond_to?(facet) && !(result.highlight_result.gtry(:[], facet).blank?) %>
 					<p class='small-caps'><strong><%= facet %></strong>
 					    <%=  result.highlight_result[facet]['value'].try(:html_safe) %>
 					</p>
@@ -36,8 +36,8 @@
 
 				    <% if result.respond_to?('content') || result.respond_to?('long_bio')%>
 
-					    <%= result.highlight_result['content'].try(:[], 'value').try(:html_safe) %>
-					    <%= result.highlight_result['long_bio'].try(:[], 'value').try(:html_safe)			    %> <% end %>
+					    <%= result.snippet_result['content'].try(:[], 'value').try(:html_safe) %>
+					    <%= result.snippet_result['long_bio'].try(:[], 'value').try(:html_safe)			    %> <% end %>
 				</p>
 				<p class="topics small-caps">
 				    <strong>Type of Item</strong>
