--- a/app/views/resources/_search_hero.html.erb
+++ b/app/views/resources/_search_hero.html.erb
@@ -7,7 +7,7 @@
 			<% if @results %>
 			    <p>
 				<% if @search %>
-				    Results found for <i><%= @search_string %></i> (<%= @resources.total_entries %>)
+				    Results found for <i><%= @search %></i> (<%= @resources.total_entries %>)
 				    
 				<% else %>
 				    All Resources (<%= @resources.total %>)
