--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -34,10 +34,10 @@
 				<p class='search-results-content'>
 
 
-				    <% if result.respond_to?('content') || result.respond_to?('long_bio')%>
+
 
 					    <%= result.snippet_result['content'].try(:[], 'value').try(:html_safe) %>
-					    <%= result.snippet_result['long_bio'].try(:[], 'value').try(:html_safe)			    %> <% end %>
+					    <%= result.snippet_result['long_bio'].try(:[], 'value').try(:html_safe)			    %> 
 				</p>
 				<p class="topics small-caps">
 				    <strong>Type of Item</strong>
