--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -34,6 +34,8 @@
 				<p class='search-results-content'>
 
 					    <%= result.snippet_result['content'].try(:[], 'value').try(:html_safe) %>
+
+					    <%= result.highlight_result['content'].try(:[], 'value').try(:html_safe) %>
 					    <%= result.snippet_result['long_bio'].try(:[], 'value').try(:html_safe)			    %> 
 				</p>
 				<p class="topics small-caps">
