--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -36,7 +36,9 @@
 		<!-- <%= result.snippet_result['content'].try(:[], 'value').try(:html_safe) %> -->
 
 		<!-- <%= result.snippet_result['long_bio'].try(:[], 'value').try(:html_safe)			    %>  -->
-		<%= result.snippet_result %>
+		<%= result.snippet_result['name'] %>
+		<%= result.snippet_result['content'] %>
+		<%= result.snippet_result['author_list_without_links'] %>
 	      </p>
 	      <p class="topics small-caps">
 		<strong>Type of Item</strong>
