--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -35,7 +35,7 @@
 
 		<!-- <%= result.snippet_result['content'].try(:[], 'value').try(:html_safe) %> -->
 
-		<!-- <%= result.snippet_result['long_bio'].try(:[], 'value').try(:html_safe)			    %>  -->
+		<%= result.highlight_result.keys %>
 		<%= result.snippet_result['name']['matchLevel'] %>
 		<%= result.snippet_result['content']['matchLevel'] %>
 		<%= result.snippet_result['author_list_without_links']['matchLevel'] %>
