--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -34,8 +34,9 @@
 	      <p class='search-results-content'>
 
 		<!-- <%= result.snippet_result['content'].try(:[], 'value').try(:html_safe) %> -->
-		<%= result.methods %>
-		<%= result.highlight_result.keys %>
+		
+		<%= result.algoliasearch_settings %>
+		<%= result.algoliasearch_options %>
 		<%= result.snippet_result['name']['matchLevel'] %>
 		<%= result.snippet_result['content']['matchLevel'] %>
 		<%= result.snippet_result['author_list_without_links']['matchLevel'] %>
