--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -39,7 +39,7 @@
 
 
 <div id='resources'>
-    <%= render 'resources', :resources => @resources, :results => (@search? @results : nil), cached: true %>
+    <%= render 'resources', :resources => @resources, :results => (@search? @results : nil), cached: false %>
 </div>
 
 		    </div>
