--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -2,6 +2,7 @@
 
 <div class='container'>
   <div class='row'>
+    
     <div class="pagination pagination-top col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
@@ -9,9 +10,11 @@
 </div>
 
 <div class="resources">
-  <% resources.each do |resource| %>
+  <% @num = 0 %>
+  
+  <% @resources.each do |resource| %>
     <% if controller.action_name == 'search' %>
-      <%= render 'search_result', :result => resource  %>
+      <%= render 'search_result', result: resource %>
     <% elsif @author %>
       <%= render 'author_listing', :resource => resource  %>
     <% else %>
@@ -19,12 +22,11 @@
     <% end %>
   <% end %>
 </div>
-  <div class='container'>
-    <div class='row'>
-
-      <div class="pagination pagination-bottom col-md-12">
-
-	<%= render :partial => '/layouts/pagination' %>
-      </div>
+<div class='container'>
+  <div class='row'>
+    <div class="pagination pagination-top col-md-12">
+      <%= render :partial => '/layouts/pagination' %>
     </div>
   </div>
+
+</div>
