--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -39,7 +39,7 @@
 
 
 <div id='resources'>
-    <%= render 'resources', :resources => @resources, :results => (@search? @results : nil), cached: false %>
+    <%= render 'resources', :resources => @resources, :results => (@search? @results : nil), cached: true %>
 </div>
 
 		    </div>
@@ -55,7 +55,7 @@
 			</div>
 		    </div>
 		<% end %>
-	    </div>
+
 
 	    <% if controller.action_name != 'search' && !(@author)%>
 		<%= render :partial => '/layouts/sidebar' %>
