--- a/app/views/rebuilds/index.html.erb
+++ b/app/views/rebuilds/index.html.erb
@@ -53,7 +53,7 @@
       $('#form').hide();
       setInterval(function () {
       if (are_waiting) {
-      $('#wait p').append(" rebuilding... ");
+      $('#wait p').append(" ... ");
       }
       }, 10000); 
      });
