--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2209,7 +2209,7 @@ PAGINATION
   font-size: 14px;
   line-height: 14px;
   letter-spacing: .07em;
-  a {
+  a, em {
     padding-left: 12px;
     font-family: 'Roboto Mono', 'Roboto', Helvetica, Arial, sans-serif;
   }
