--- a/app/views/layouts/_pagination.html.erb
+++ b/app/views/layouts/_pagination.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
 
-    <% if params[:view] == 'all' %>
+    <% if params[:view] == 'all' || !(params[:author].blank?)%>
       1-<%= @resources.total_entries %> of <%= @resources.total_entries %> Items
     <% else %>
       <%= will_paginate @resources %>
