--- a/app/views/layouts/_pagination.html.erb
+++ b/app/views/layouts/_pagination.html.erb
@@ -1,14 +1,15 @@
 <div class="container">
   <div class="row">
 
-    <% if @resources.respond_to?(:total_entries) %>
+    <% if params[:view] || params[:author] || params[:topic] %>
+                  1-<%= @resources.total_entries %> of <%= @resources.total_entries %> Items
+<% elsif @resources.respond_to?(:next_page) %>
             <%= will_paginate @resources %>
       <% if @resources.next_page %>
 	&nbsp;| <%= link_to "View All", params.merge(:view => 'all', :page => 1).permit! %>
       <% end %>
-    <% else %>
-            1-<%= @resources.total_entries %> of <%= @resources.total_entries %> Items
     <% end %>
+
   </div>
 </div>
 
