--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -2,7 +2,6 @@
 
 <div class='container'>
   <div class='row'>
-    
     <div class="pagination pagination-top col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
@@ -22,9 +21,9 @@
     <% end %>
   <% end %>
 
-<div class='container'>
-  <div class='row'>
-    <div class="pagination pagination-top col-md-12">
+  <div class='container'>
+    <div class='row'>
+    <div class="pagination col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
   </div>
