--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -20,7 +20,8 @@
       <%= render 'listing', :resource => resource  %>
     <% end %>
   <% end %>
-
+</div>
+<div style='clear: both;'>&nbsp;</div>
   <div class='container'>
     <div class='row'>
     <div class="pagination col-md-12">
@@ -28,5 +29,5 @@
     </div>
   </div>
 
-</div>
+
 </div>
