--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -22,12 +22,11 @@
   <% end %>
 </div>
 <div style='clear: both;'>&nbsp;</div>
-  <div class='container'>
+
+<div class='container'>
     <div class='row'>
-    <div class="pagination col-md-12">
+    <div class="pagination pagination-bottom col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
   </div>
-
-
 </div>
