--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -1,7 +1,8 @@
-
+<div class='container'>
 
     <div class="pagination pagination-top col-md-12">
       <%= render :partial => '/layouts/pagination' %>
+    </div>
     </div>
 
 <div class="resources">
@@ -20,7 +21,8 @@
   <% end %>
 </div>
 <div style='clear: both;'>&nbsp;</div>
-
+<div class='container'>
     <div class="pagination pagination-bottom col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
+</div>
