--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -1,9 +1,9 @@
-<div class='container'>
+<div>
 
     <div class="pagination pagination-top col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
-    </div>
+</div>
 
 <div class="resources">
   <% @num = 0 %>
@@ -21,7 +21,7 @@
   <% end %>
 </div>
 <div style='clear: both;'>&nbsp;</div>
-<div class='container'>
+<div>
     <div class="pagination pagination-bottom col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
