--- a/app/views/layouts/_pagination.html.erb
+++ b/app/views/layouts/_pagination.html.erb
@@ -8,10 +8,9 @@
   <% if params[:author] %>
 
     <div class='container'>
-<% end %.
+<% end %>
       1-<%= @resources.size %> of <%= @resources.size %> Items
 <% if params[:author] %>
-
     </div>
 <% end %>
   <% end %>
