--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -1,4 +1,8 @@
-<div>
+<div   <% if params[:author] %>
+
+    class='container'
+<% end %>
+>
 
     <div class="pagination pagination-top col-md-12">
       <%= render :partial => '/layouts/pagination' %>
@@ -21,7 +25,10 @@
   <% end %>
 </div>
 <div style='clear: both;'>&nbsp;</div>
-<div>
+<div   <% if params[:author] %>
+
+    class='container'
+<% end %>>
     <div class="pagination pagination-bottom col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
