--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -1,7 +1,4 @@
-<div   <% if params[:author] %>
-
-    class='container'
-<% end %>
+<div
 >
 
     <div class="pagination pagination-top col-md-12">
@@ -25,10 +22,7 @@
   <% end %>
 </div>
 <div style='clear: both;'>&nbsp;</div>
-<div   <% if params[:author] %>
-
-    class='container'
-<% end %>>
+<div>
     <div class="pagination pagination-bottom col-md-12">
       <%= render :partial => '/layouts/pagination' %>
     </div>
