--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -38,7 +38,7 @@
 <% end %>
 
 
-<div id='resources'>
+<div id='resources' class='container'>
     <%= render 'resources', :resources => @resources, :results => (@search? @results : nil), cached: true %>
 </div>
 
