--- a/app/views/layouts/_pagination.html.erb
+++ b/app/views/layouts/_pagination.html.erb
@@ -2,7 +2,7 @@
 <% if @resources.respond_to?(:next_page) %>
   <%= will_paginate @resources %>
 
-  &nbsp;| <% if @resources.total_pages != @resources.current_page %> ><%= link_to "View All", params.merge(:view => 'all', :page => 1).permit! %>
+  &nbsp;| <% if @resources.total_pages != @resources.current_page %> <%= link_to "View All", params.merge(:view => 'all', :page => 1).permit! %>
 <% end %>
 
 <% elsif params[:view] || params[:author] || params[:topic] || params[:category] %>
