--- a/app/views/layouts/_pagination.html.erb
+++ b/app/views/layouts/_pagination.html.erb
@@ -2,7 +2,9 @@
 <% if @resources.respond_to?(:next_page) %>
   <%= will_paginate @resources %>
 
-  &nbsp;| <% if @resources.total_pages != @resources.current_page %> <%= link_to "View All", params.merge(:view => 'all', :page => 1).permit! %>
+  <% if @resources.total_pages != @resources.current_page %>   &nbsp;| <%= link_to "View All", params.merge(:view => 'all', :page => 1).permit! %>
+  <% else %>
+    1-<%= @resources.size %> of <%= @resources.size %> Items
 <% end %>
 
 <% elsif params[:view] || params[:author] || params[:topic] || params[:category] %>
