--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -2,7 +2,7 @@
 
 <div class="event-blog-row search-row">
 
-
+      <div class='container'>
     <div class="row">
 
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
@@ -68,7 +68,7 @@
       </div>
 
 
-
+</div>
 </div>
 
 
