--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2213,6 +2213,7 @@ PAGINATION
     padding-left: 12px;
     font-family: 'Roboto Mono', 'Roboto', Helvetica, Arial, sans-serif;
   }
+  float: left;
 }
 
 .pagination-top {
