--- a/app/views/resources/_resources.html.erb
+++ b/app/views/resources/_resources.html.erb
@@ -1,5 +1,5 @@
-<div <% if params[:search_string] %> class='container'>
->
+<div <% if params[:search_string] %> class='container' <% end %>>
+
 
     <div class="pagination pagination-top col-md-12">
       <%= render :partial => '/layouts/pagination' %>
